--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,14 @@ dependencies:
   flutter:
     sdk: flutter
   equatable: ^2.0.7
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  mockito: ^5.4.6
 
 flutter:
   uses-material-design: true
