--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   equatable: ^2.0.7
   dartz: ^0.10.1
   shared_preferences: ^2.5.3
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
