di-injection added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   dartz: ^0.10.1
   shared_preferences: ^2.5.3
   fluttertoast: ^8.2.12
+  get_it: ^8.0.3
+  injectable: ^2.5.0
 
 dev_dependencies:
   flutter_test:
@@ -20,6 +22,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.15
   mockito: ^5.4.6
+  injectable_generator: ^2.7.0
 
 flutter:
   uses-material-design: true
