--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   fluttertoast: ^8.2.12
   get_it: ^8.0.3
   injectable: ^2.5.0
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
