--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dev_dependencies:
   build_runner: ^2.4.15
   mockito: ^5.4.6
   injectable_generator: ^2.7.0
+  bdd_widget_test: ^1.8.1
 
 flutter:
   uses-material-design: true
